--- a/css/main.css
+++ b/css/main.css
@@ -48,10 +48,63 @@ img{
 
 .container{
     width: 100%;
-    max-width: 1240px;
+    max-width: 1150px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 20px;
     padding-left: 20px;
 }
 
+/****************** HEADER STYLES START *******************/
+.site-header{
+    padding-top: 73px;
+    padding-bottom: 73px;
+    background-color: #014E56;
+}
+
+.site-header__wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.site-header__start{
+    display: flex;
+    align-items: center;
+}
+
+.site-header__logo-img{
+    width: 159px;
+    height: 40px;
+    margin-right: 80px;
+}
+
+.sitenav-list{
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+}
+
+.sitenav-item{
+    margin-right: 40px;
+}
+
+.sitenav-link{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+    text-decoration: none;
+    color: #fff;    
+}
+
+.site-header__btn{
+    padding: 9px 33px 11px 32px;
+    border: 2px solid #fff;
+    border-radius: 24px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+    text-decoration: none;
+    color: #fff;
+}
+/****************** HEADER STYLES END *******************/
